# rusty_nature_of_code

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs  noc.rs  prelude.rs
src/bouncy_balls/: mod.rs  prelude.rs
src/noc/: data.rs  systems.rs
src/smart_rockets/: data.rs  mod.rs  prelude.rs  systems.rs
